--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-simple-uploader": "^0.7.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.14.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
